<resources>
    <string name="app_name">ZAPP</string>

    <!-- Accessibility strings for DrawerToggle -->
    <string name="open_drawer_accessibility_desc">Open navigation</string>
    <string name="close_drawer_accessibility_desc">Close navigation</string>

    <!-- Nav drawer items -->
    <string name="nav_item_title_travel_stream">Travel Stream</string>
    <string name="nav_item_title_my_books">My Books</string>
    <string name="nav_item_title_my_music">My Music</string>
    <string name="nav_item_title_settings">Settings</string>
    <string name="nav_item_title_about">About</string>

    <!-- Travel stream card -->
    <string name="travel_stream_card_subtitle">Wyoming\nCampo Santo, Yellowstone National Park</string>
    <string name="travel_stream_card_subtitle_header">Lorem ipsum</string>
    <string name="travel_stream_card_action_share">Share</string>
    <string name="travel_stream_card_action_explore">Explore</string>

    <!-- My music header card -->
    <string name="my_music_header_title">Unlimited music now</string>
    <string name="my_music_header_desc">Listen to your favorite artists and albums whenever wherever online and offline</string>
    <string name="my_music_header_action">Listen now</string>

    <!-- Note: Match the following entries with textStyle="normal|bold|italic" -->
    <!-- Roboto Regular -->
    <string name="ff_roboto_regular" translatable="false">sans-serif</string>
    <!-- Roboto Light -->
    <string name="ff_roboto_light" translatable="false">sans-serif-light</string>
    <!-- Roboto Condensed -->
    <string name="ff_roboto_condensed" translatable="false">sans-serif-condensed</string>
    <!-- Roboto Thin - requires 4.2 -->
    <string name="ff_roboto_thin" translatable="false">sans-serif-thin</string>
    <!-- Roboto Medium - requires 5.0 -->
    <string name="ff_roboto_medium" translatable="false">sans-serif-medium</string>
</resources>
