<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="144dp">

            <ImageView
                android:id="@+id/row_travel_stream_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@drawable/travel_stream_3" />

            <TextView
                android:id="@+id/row_travel_stream_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@string/ff_roboto_medium"
                android:padding="16dp"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                tools:text="Wyoming wilderness" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/travel_stream_card_subtitle_header"
            android:textColor="@color/text_color_subtitle" />

        <TextView
            android:id="@+id/row_travel_stream_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:padding="16dp"
            android:textColor="@color/text_color_title"
            android:textSize="16sp"
            tools:text="@string/travel_stream_card_subtitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:text="@string/travel_stream_card_action_share"
                android:textColor="@color/amber_500_primary" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:text="@string/travel_stream_card_action_explore"
                android:textColor="@color/amber_500_primary" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
