<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/music_card_horizontal_margin_outer"
    android:layout_marginRight="@dimen/music_card_horizontal_margin_outer"
    android:layout_marginTop="@dimen/music_card_vertical_margin_outer"
    app:cardBackgroundColor="@color/blue_grey_700"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_music_header_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/music_card_text_size_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/music_card_vertical_margin"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/my_music_header_desc"
            android:textColor="@android:color/white"
            android:textSize="@dimen/music_card_text_size_desc" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/music_card_vertical_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/my_music_header_action"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.v7.widget.CardView>
